--- a/LearnToCode/Components/Layout/Footer.razor
+++ b/LearnToCode/Components/Layout/Footer.razor
@@ -2,7 +2,7 @@
     <div class="container mx-auto px-4 flex flex-wrap justify-between">
         <div class="w-full md:w-1/3 mb-6 md:mb-0">
             <div class="flex items-center mb-4">
-                <img src="Images/LogoLightTheme.png" alt="Logo" class="w-16 h-16">
+                <img src="Images/LogoNoText.png" alt="Logo" class="w-16 h-16">
             </div>
             <p class="text-sm text-gray-600">The one-stop shop for all developers.</p>
             <div class="flex mt-4 space-x-3">
