--- a/LearnToCode/Components/Layout/NavMenu.razor
+++ b/LearnToCode/Components/Layout/NavMenu.razor
@@ -3,7 +3,7 @@
         <div class="flex lg:flex-1">
             <NavLink href="/" class="-m-1.5 p-1.5">
                 <span class="sr-only">The Developer Hub</span>
-                <img class="w-16 h-auto" src="/Images/LogoLightTheme.png" alt="">
+                <img class="w-16 h-auto" src="/Images/LogoNoText.png" alt="">
             </NavLink>
         </div>
         <div class="flex lg:hidden">
@@ -41,7 +41,7 @@
             <div class="flex items-center justify-between">
                 <NavLink href="/" class="-m-1.5 p-1.5">
                     <span class="sr-only">The Developer Hub</span>
-                    <img class="w-16 h-auto" src="/Images/LogoLightTheme.png" alt="">
+                    <img class="w-16 h-auto" src="/Images/LogoNoText.png" alt="">
                 </NavLink>
                 <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700" mobileMenuToggle>
                     <span class="sr-only">Close menu</span>
