--- a/LearnToCode/Components/Pages/Account/Login.razor
+++ b/LearnToCode/Components/Pages/Account/Login.razor
@@ -7,20 +7,20 @@
         <div class="flex-1 flex items-center justify-center bg-white h-full rounded-l-lg">
             <div class="max-w-md w-full">
                 <div class="text-center mb-8">
-                    <img src="Images/LogoLightTheme.png" class="w-8 h-8"/>
+                    <img src="Images/LogoNoText.png" class="w-8 h-8"/>
                 </div>
                 <h2 class="text-3xl font-bold text-gray-900 mb-2">Sign in to your account</h2>
                 <p class="text-sm text-gray-600 mb-6">Not a member? <a href="/Signup" class="text-indigo-600">Sign up now!</a></p>
-                <EditForm Model="Model" OnValidSubmit="SubmitFormAsync" FormName="LoginForm">
+                <EditForm Model="@Model" OnSubmit="SubmitFormAsync" FormName="LoginForm">
                     <DataAnnotationsValidator/>
                     <div class="flex flex-col gap-6">
                         <div>
                             <label for="email" class="sr-only">Email address</label>
-                            <InputText @bind-Value="Model.Email" id="email" name="email" type="email" autocomplete="email" required class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address"/>
+                            <InputText @bind-Value="Model.Email" id="email" name="email" type="email" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address"/>
                         </div>
                         <div>
                             <label for="password" class="sr-only">Password</label>
-                            <InputText @bind-Value="Model.Password" id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password"/>
+                            <InputText @bind-Value="Model.Password" id="password" name="password" type="password" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password"/>
                         </div>
                         <div class="flex items-center justify-end w-full">
                             <div class="text-sm w-full">
