--- a/LearnToCode/Components/_Imports.razor
+++ b/LearnToCode/Components/_Imports.razor
@@ -12,5 +12,6 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Authorization
 @using DeveloperHub.Components.Layout
+@using Blazored.FluentValidation
 @inject AppDbContext appDbContext
 @inject NavigationManager navigationManager
