--- a/LearnToCode/Components/Pages/Account/Signup.razor
+++ b/LearnToCode/Components/Pages/Account/Signup.razor
@@ -85,7 +85,7 @@
                                 <label for="country" class="sr-only">Country</label>
                                 <InputText @bind-Value="_model.Country" id="country" name="country"
                                            class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                           placeholder="Country *" />
+                                           placeholder="Country" />
                                 <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Country" />
                             </div>
                         </div>
@@ -94,14 +94,14 @@
                                 <label for="postalCode" class="sr-only">Postal Code</label>
                                 <InputText @bind-Value="_model.PostalCode" id="postalCode" name="postalCode"
                                            class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                           placeholder="Postal Code *" />
+                                           placeholder="Postal Code" />
                                 <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.PostalCode" />
                             </div>
                             <div class="w-full flex flex-col">
                                 <label for="organisation" class="sr-only">Organisation</label>
                                 <InputText @bind-Value="_model.Organisation" id="organisation" name="organisation"
                                            class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                           placeholder="Organisation *" />
+                                           placeholder="Organisation" />
                                 <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Organisation" />
                             </div>
                         </div>
@@ -110,14 +110,14 @@
                                 <label for="role" class="sr-only">Role</label>
                                 <InputText @bind-Value="_model.Role" id="role" name="role"
                                            class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                           placeholder="Role *" />
+                                           placeholder="Role" />
                                 <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Role" />
                             </div>
                             <div class="w-full flex flex-col">
                                 <label for="department" class="sr-only">Department</label>
                                 <InputText @bind-Value="_model.Department" id="department" name="department"
                                            class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                           placeholder="Department *" />
+                                           placeholder="Department" />
                                 <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Department" />
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                                 <label for="birthday" class="sr-only">Birthday</label>
                                 <InputDate @bind-Value="_model.Birthday" id="birthday" name="birthday"
                                            class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                           placeholder="Birthday *" />
+                                           placeholder="Birthday" />
                                 <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Birthday" />
                             </div>
                         </div>
