--- a/LearnToCode/Components/Pages/Account/Login.razor
+++ b/LearnToCode/Components/Pages/Account/Login.razor
@@ -11,22 +11,29 @@
                 </div>
                 <h2 class="text-3xl font-bold text-gray-900 mb-2">Sign in to your account</h2>
                 <p class="text-sm text-gray-600 mb-6">Not a member? <a href="/Signup" class="text-indigo-600">Sign up now!</a></p>
-                <EditForm Model="@Model" OnSubmit="SubmitFormAsync" FormName="LoginForm">
+                <EditForm Model="@_model" OnSubmit="SubmitFormAsync" FormName="LoginForm">
+                    <FluentValidationValidator DisableAssemblyScanning="true" Validator="@_validator" />
                     <DataAnnotationsValidator/>
                     <div class="flex flex-col gap-6">
                         <div>
                             <label for="email" class="sr-only">Email address</label>
-                            <InputText @bind-Value="Model.Email" id="email" name="email" type="email" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address"/>
+                            <InputText @bind-Value="_model.Email" id="email" name="email" type="email" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Email address"/>
+                            <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Email" />
                         </div>
                         <div>
                             <label for="password" class="sr-only">Password</label>
-                            <InputText @bind-Value="Model.Password" id="password" name="password" type="password" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password"/>
+                            <InputText @bind-Value="_model.Password" id="password" name="password" type="password" class="appearance-none rounded-md relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder="Password" />
+                            <ValidationMessage class="mt-1 text-sm text-red-600" For="() => _model.Password" />
                         </div>
                         <div class="flex items-center justify-end w-full">
                             <div class="text-sm w-full">
                                 <a href="/forgot-password" class="font-medium text-indigo-600 hover:text-indigo-500"> Forgot password? </a>
                             </div>
                         </div>
+                        @if(_errorMessage != null)
+                        {
+                            <div class="text-red-500 text-sm">@_errorMessage</div>
+                        }
                         <div>
                             <button type="submit" class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                                 Sign in
