--- a/LearnToCode/Components/Pages/Account/Account.razor
+++ b/LearnToCode/Components/Pages/Account/Account.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Account"
+@rendermode InteractiveServer
 @using TimeZone = DeveloperHub.Components.Pages.Account.AccountEnums.TimeZone
 @using DeveloperHub.Components.Pages.Account.AccountEnums
 @if (User == null)
