--- a/LearnToCode/Components/_Imports.razor
+++ b/LearnToCode/Components/_Imports.razor
@@ -13,6 +13,7 @@
 @using Microsoft.AspNetCore.Authorization
 @using DeveloperHub.Components.Layout
 @using Blazored.FluentValidation
+@inject HttpContextService HttpContextService
 
 @inject AppDbContext appDbContext
 @inject NavigationManager navigationManager
