--- a/LearnToCode/Components/App.razor
+++ b/LearnToCode/Components/App.razor
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<Routes @rendermode="InteractiveServer" />
+<Routes @rendermode="@InteractiveServer" />
 <script src="_framework/blazor.web.js"></script>
 <script src="https://unpkg.com/taos@1.0.5/dist/taos.js"></script>
 </body>
